# memo

./: .gitignore  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  autogen.sh  configure.ac  general.sh  globals.sh  memo.in  receiving.sh  sending.sh  setup.py
common/: Makefile.am  macros.h  messages.c  messages.h  xmalloc.c  xmalloc.h
doc/: Makefile.am  memo.texi  memo_word_get_translations.c
libmemo/: Makefile.am  database.c  database.h  libmemo.h  macros.h  messaging.c  messaging.h  parse-reply.pl  word.c  xmalloc.h
m4/: ax_lib_sqlite3.m4
src/: Makefile.am  activerecord.py  entities.py  main.c  messaging.py  tutor.py
src/scripts/: memo
test/: Makefile.am  basic_database_test.c  basic_database_test.sh  directory.h.in  entities_test.py  messaging_test.py  reply1.eml  test_helpers.py  test_parsing_a_reply_with_invalid_question.eml  test_parsing_a_tiny_reply.eml  tests.c
website/: .gitignore  Makefile.am  Memo.setup  contribute.mdwn  get-memo.mdwn  index.mdwn  local.css
website/tmpl/: page.tmpl
